[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/EnemyMelee.gd" type="Script" id=1]
[ext_resource path="res://Objects/Enemies/Bat/BatRat.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/SFX/Enemies/Enemy Death 3.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/SFX/Enemies/Enemy Alert 3.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5
height = 0.783607

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.4298, 0.516572, 0.248251 )

[sub_resource type="SphereShape" id=3]
margin = 0.001
radius = 10.0

[sub_resource type="SphereShape" id=4]
radius = 2.0

[node name="EnemyMelee" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 1 )

[node name="RayCast" type="RayCast" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 0, 0 )
enabled = true
cast_to = Vector3( 10, 0, 0 )

[node name="ratManV2" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0, 0, 0 )
shape = SubResource( 1 )

[node name="HeadCollision" type="CollisionShape" parent="." groups=[
"Head",
]]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, 1, 0, -1, -1.62921e-07, 0.0167125, 0.737437, -0.0276762 )
shape = SubResource( 2 )

[node name="SightRange" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
shape = SubResource( 3 )

[node name="Eyes" type="Spatial" parent="."]

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="NavigationTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Enemies"

[node name="HitRange" type="Area" parent="."]
input_ray_pickable = false
space_override = 1
collision_layer = 0

[node name="CollisionShape" type="CollisionShape" parent="HitRange"]
shape = SubResource( 4 )

[node name="AudioAlert" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Enemies"
[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="NavigationTimer" to="." method="_on_NavigationTimer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="finished" from="Audio" to="." method="_on_Audio_finished"]
[connection signal="body_entered" from="HitRange" to="." method="_on_HitRange_body_entered"]
[connection signal="body_exited" from="HitRange" to="." method="_on_HitRange_body_exited"]
